--- a/dev/docker/services/app/Dockerfile
+++ b/dev/docker/services/app/Dockerfile
@@ -1,4 +1,4 @@
 ################################################################################
-# Authentication server.
+# Application server.
 ################################################################################
 FROM rust_base AS base
