feat: Store client ID in cookie

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -31,8 +31,8 @@ FALLBACK_LOCALE=ja
 ################################################################################
 
 # Header keys
-CLIENT_ID_KEY=X-Client-Id
-CLIENT_SECRET_KEY=X-Client-Secret
+CLIENT_ID_KEY=client_id
+CLIENT_SECRET_KEY=client_secret
 
 # Meower
 MEOWER_CLIENT_ID=dJfcedRutIhbH4ar1K1fhRpInQpFnEvM
