--- a/dev/system/auth/core/Cargo.toml
+++ b/dev/system/auth/core/Cargo.toml
@@ -15,6 +15,7 @@ meower_entity_ext = { version = "0.1.0", path = "../../common/entity_ext" }
 accept-language = "3.1.0"
 askama = "0.12.1"
 axum = "0.7.2"
+axum-extra = { version = "0.9.2", features = ["cookie"] }
 rust-i18n = "2.3.0"
 sea-orm = { version = "0.12.6", features = [
     "runtime-tokio-rustls",
@@ -24,3 +25,4 @@ serde = "1.0.192"
 serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["fs"] }
+time = "0.3.31"
