--- a/dev/.env.example
+++ b/dev/.env.example
@@ -4,11 +4,20 @@
 
 # Auth server
 AUTH_PORT=9000
+
 AUTH_DB_PORT=5432
 AUTH_DB_NAME=meower_auth
 AUTH_DB_USER=meower_auth
 AUTH_DB_PASSWORD=meower_auth
 AUTH_DB_URL=postgres://${AUTH_DB_USER}:${AUTH_DB_PASSWORD}@auth_db:${AUTH_DB_PORT}/${AUTH_DB_NAME}?sslmode=disable
+
+AUTH_SMTP_HOST=mailhog
+AUTH_SMTP_PORT=1025
+AUTH_SMTP_USER=meower_auth
+AUTH_SMTP_PASSWORD=meower_auth
+AUTH_SMTP_TLS=false
+AUTH_SYSTEM_EMAIL_ADDRESS=Meower <system@meower_auth.com>
+
 
 # App server
 APP_PORT=8080
