--- a/dev/system/app/core/Cargo.toml
+++ b/dev/system/app/core/Cargo.toml
@@ -18,3 +18,6 @@ sea-orm = { version = "0.12.6", features = [
     "sqlx-postgres"
 ]}
 tokio = { version = "1.34.0", features = ["full"] }
+serde = "1.0.195"
+reqwest = "0.11.23"
+serde_json = "1.0.111"
