--- a/dev/system/auth/core/Cargo.toml
+++ b/dev/system/auth/core/Cargo.toml
@@ -11,7 +11,9 @@ repository = "https://github.com/ichigo-dev/meower"
 
 [dependencies]
 meower_auth_entity = { version = "0.1.0", path = "../entity" }
+meower_auth_shared = { version = "0.1.0", path = "../shared" }
 meower_entity_ext = { version = "0.1.0", path = "../../common/entity_ext" }
+meower_utility = { version = "0.1.0", path = "../../common/utility" }
 accept-language = "3.1.0"
 askama = "0.12.1"
 axum = "0.7.2"
@@ -32,3 +34,5 @@ serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["fs"] }
 time = "0.3.31"
+chrono = "0.4.31"
+jsonwebtoken = "9.2.0"
