feat: Implement authorization flow

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -2,6 +2,9 @@
 # Containers
 ################################################################################
 
+# Environment
+ENV=dev
+
 # Auth server
 AUTH_PORT=9000
 AUTH_URL=http://localhost:${AUTH_PORT}
@@ -30,12 +33,17 @@ APP_DB_URL=postgres://${APP_DB_USER}:${APP_DB_PASSWORD}@app_db:${APP_DB_PORT}/${
 APP_AUTH_LOGIN_URL=http://localhost:9000/auth/login
 APP_AUTH_REQUEST_TOKEN_URL=http://auth:9000/auth/request_token
 
+# API gateway
+API_GW_URL=http://localhost:8081
+
 
 ################################################################################
 # Application settings
 ################################################################################
 
 FALLBACK_LOCALE=ja
+JWT_PRIVATE_KEY=jwt_key.pem
+JWT_PUBLIC_KEY=jwt_key.pub.pem
 
 
 ################################################################################
