--- a/dev/system/app/core/Cargo.toml
+++ b/dev/system/app/core/Cargo.toml
@@ -11,8 +11,11 @@ repository = "https://github.com/ichigo-dev/meower"
 
 [dependencies]
 meower_app_entity = { version = "0.1.0", path = "../entity" }
+meower_auth_shared = { version = "0.1.0", path = "../../auth/shared" }
 meower_entity_ext = { version = "0.1.0", path = "../../common/entity_ext" }
 axum = "0.7.2"
+axum-extra = { version = "0.9.2", features = ["cookie"] }
+jsonwebtoken = { version = "9.2.0", features = ["use_pem"] }
 sea-orm = { version = "0.12.6", features = [
     "runtime-tokio-rustls",
     "sqlx-postgres"
@@ -21,3 +24,4 @@ tokio = { version = "1.34.0", features = ["full"] }
 serde = "1.0.195"
 reqwest = "0.11.23"
 serde_json = "1.0.111"
+tower-http = { version = "0.5.0", features = ["fs"] }
