--- a/dev/system/auth/core/Cargo.toml
+++ b/dev/system/auth/core/Cargo.toml
@@ -18,6 +18,8 @@ accept-language = "3.1.0"
 askama = "0.12.1"
 axum = "0.7.2"
 axum-extra = { version = "0.9.2", features = ["cookie"] }
+chrono = "0.4.31"
+jsonwebtoken = { version = "9.2.0", features = ["use_pem"] }
 lettre = { version = "0.11.2", features = [
     "builder",
     "tokio1",
@@ -34,5 +36,3 @@ serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["fs"] }
 time = "0.3.31"
-chrono = "0.4.31"
-jsonwebtoken = "9.2.0"
