--- a/dev/.env.example
+++ b/dev/.env.example
@@ -25,16 +25,19 @@ AUTH_SYSTEM_EMAIL_ADDRESS=Meower <system@meower_auth.com>
 # App server
 APP_PORT=8080
 APP_URL=http://localhost:${APP_PORT}
+
 APP_DB_PORT=15432
 APP_DB_NAME=meower_app
 APP_DB_USER=meower_app
 APP_DB_PASSWORD=meower_app
 APP_DB_URL=postgres://${APP_DB_USER}:${APP_DB_PASSWORD}@app_db:${APP_DB_PORT}/${APP_DB_NAME}?sslmode=disable
+
 APP_AUTH_LOGIN_URL=http://localhost:9000/auth/login
 APP_AUTH_REQUEST_TOKEN_URL=http://auth:9000/auth/request_token
 
 # API gateway
-API_GW_URL=http://localhost:8081
+API_GW_PORT=8081
+API_GW_URL=http://localhost:${API_GW_PORT}
 
 
 ################################################################################
