--- a/dev/system/app/core/Cargo.toml
+++ b/dev/system/app/core/Cargo.toml
@@ -23,5 +23,6 @@ sea-orm = { version = "0.12.6", features = [
 ]}
 serde = "1.0.195"
 serde_json = "1.0.111"
+time = "0.3.31"
 tokio = { version = "1.34.0", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["fs"] }
