--- a/dev/system/api_gw/core/Cargo.toml
+++ b/dev/system/api_gw/core/Cargo.toml
@@ -10,5 +10,7 @@ repository = "https://github.com/ichigo-dev/meower"
 
 
 [dependencies]
+meower_auth_shared = { version = "0.1.0", path = "../../auth/shared" }
 axum = "0.7.2"
+jsonwebtoken = "9.2.0"
 tokio = { version = "1.34.0", features = ["full"] }
