--- a/dev/system/auth/core/Cargo.toml
+++ b/dev/system/auth/core/Cargo.toml
@@ -19,7 +19,7 @@ askama = "0.12.1"
 axum = "0.7.2"
 axum-extra = { version = "0.9.2", features = ["cookie"] }
 chrono = "0.4.31"
-jsonwebtoken = { version = "9.2.0", features = ["use_pem"] }
+jsonwebtoken = "9.2.0"
 lettre = { version = "0.11.2", features = [
     "builder",
     "tokio1",
