--- a/dev/system/app/core/Cargo.toml
+++ b/dev/system/app/core/Cargo.toml
@@ -15,6 +15,7 @@ meower_auth_shared = { version = "0.1.0", path = "../../auth/shared" }
 meower_entity_ext = { version = "0.1.0", path = "../../common/entity_ext" }
 axum = "0.7.2"
 axum-extra = { version = "0.9.2", features = ["cookie"] }
+html5ever = "0.26.0"
 jsonwebtoken = "9.2.0"
 reqwest = "0.11.23"
 sea-orm = { version = "0.12.6", features = [
