--- a/dev/.env.example
+++ b/dev/.env.example
@@ -23,6 +23,7 @@ AUTH_SMTP_TLS=false
 AUTH_SYSTEM_EMAIL_ADDRESS=Meower <system@meower_auth.com>
 
 # App server
+APP_USER_TOKEN_KEY=user_token
 APP_PORT=8080
 
 APP_DB_PORT=15432
@@ -55,6 +56,7 @@ JWT_PUBLIC_KEY=jwt_key.pub.pem
 # Header keys
 CLIENT_ID_KEY=client_id
 CLIENT_SECRET_KEY=client_secret
+ACCESS_TOKEN_KEY=access_token
 
 # Meower
 MEOWER_CLIENT_ID=dJfcedRutIhbH4ar1K1fhRpInQpFnEvM
