--- a/dev/system/app/core/Cargo.toml
+++ b/dev/system/app/core/Cargo.toml
@@ -11,12 +11,10 @@ repository = "https://github.com/ichigo-dev/meower"
 
 [dependencies]
 meower_app_entity = { version = "0.1.0", path = "../entity" }
-meower_auth_shared = { version = "0.1.0", path = "../../auth/shared" }
 meower_entity_ext = { version = "0.1.0", path = "../../common/entity_ext" }
 axum = "0.7.2"
 axum-extra = { version = "0.9.2", features = ["cookie"] }
-html5ever = "0.26.0"
-jsonwebtoken = "9.2.0"
+html_editor = "0.7.0"
 reqwest = "0.11.23"
 sea-orm = { version = "0.12.6", features = [
     "runtime-tokio-rustls",
@@ -24,6 +22,5 @@ sea-orm = { version = "0.12.6", features = [
 ]}
 serde = "1.0.195"
 serde_json = "1.0.111"
-time = "0.3.31"
 tokio = { version = "1.34.0", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["fs"] }
