--- a/dev/system/api_gw/core/Cargo.toml
+++ b/dev/system/api_gw/core/Cargo.toml
@@ -14,3 +14,4 @@ meower_auth_shared = { version = "0.1.0", path = "../../auth/shared" }
 axum = "0.7.2"
 jsonwebtoken = "9.2.0"
 tokio = { version = "1.34.0", features = ["full"] }
+tower-http = { version = "0.5.0", features = ["cors"] }
