--- a/dev/system/api_gw/core/Cargo.toml
+++ b/dev/system/api_gw/core/Cargo.toml
@@ -13,5 +13,8 @@ repository = "https://github.com/ichigo-dev/meower"
 meower_auth_shared = { version = "0.1.0", path = "../../auth/shared" }
 axum = "0.7.2"
 jsonwebtoken = "9.2.0"
+reqwest = "0.11.23"
 tokio = { version = "1.34.0", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["cors"] }
+serde = "1.0.195"
+serde_json = "1.0.111"
