--- a/dev/.env.example
+++ b/dev/.env.example
@@ -26,6 +26,7 @@ AUTH_SYSTEM_EMAIL_ADDRESS=Meower <system@meower_auth.com>
 # App server
 APP_USER_TOKEN_KEY=user_token
 APP_PORT=8080
+APP_URL=http://localhost:${APP_PORT}
 
 APP_DB_PORT=15432
 APP_DB_NAME=meower_app
