--- a/dev/compose.yml
+++ b/dev/compose.yml
@@ -122,6 +122,7 @@ services:
       - ./system/app/spa:/system/app/spa
       - ./proto/ui_catalog/assets/scss:/system/app/spa/public/scss
     environment:
+      APP_URL: ${APP_URL}
       API_URL: ${API_GW_URL}
       CLIENT_ID_KEY: ${CLIENT_ID_KEY}
       ACCESS_TOKEN_KEY: ${ACCESS_TOKEN_KEY}
