feat: Add API key protection to auth server API

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -23,6 +23,9 @@ AUTH_SMTP_PASSWORD=meower_auth
 AUTH_SMTP_TLS=false
 AUTH_SYSTEM_EMAIL_ADDRESS=Meower <system@meower_auth.com>
 
+AUTH_API_KEY_KEY=api_key
+AUTH_API_KEY_VAL=Tf#kyaBXx+2CEHXwi8M+W)PPL&zALbWW
+
 # App server
 APP_USER_TOKEN_KEY=user_token
 APP_PORT=8080
