--- a/dev/.env.example
+++ b/dev/.env.example
@@ -8,7 +8,7 @@ ENV=dev
 # Auth server
 AUTH_PORT=9000
 AUTH_URL=http://localhost:${AUTH_PORT}
-AUTH_API_URL=http://auth:${AUTH_PORT}/api
+AUTH_API_URL=http://auth:${AUTH_PORT}
 
 AUTH_DB_PORT=5432
 AUTH_DB_NAME=meower_auth
