--- a/dev/system/app/core/Cargo.toml
+++ b/dev/system/app/core/Cargo.toml
@@ -24,3 +24,4 @@ serde = "1.0.195"
 serde_json = "1.0.111"
 tokio = { version = "1.34.0", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["fs"] }
+time = "0.3.31"
