feat: Add account API migrations and entities

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -43,6 +43,21 @@ API_GW_URL=http://localhost:${API_GW_PORT}
 
 
 ################################################################################
+# APIs
+################################################################################
+
+# Account API
+ACCOUNT_PORT=9001
+ACCOUNT_API_URL=http://account:${ACCOUNT_PORT}
+
+ACCOUNT_DB_PORT=25432
+ACCOUNT_DB_NAME=meower_account
+ACCOUNT_DB_USER=meower_account
+ACCOUNT_DB_PASSWORD=meower_account
+ACCOUNT_DB_URL=postgres://${ACCOUNT_DB_USER}:${ACCOUNT_DB_PASSWORD}@account_db:${ACCOUNT_DB_PORT}/${ACCOUNT_DB_NAME}?sslmode=disable
+
+
+################################################################################
 # Application settings
 ################################################################################
 
