--- a/dev/compose.yml
+++ b/dev/compose.yml
@@ -142,7 +142,7 @@ services:
       - ${API_GW_PORT}:${API_GW_PORT}
     volumes:
       - ./system/api_gw:/system/api_gw
-      - ./system/auth/shared:/system/auth/shared
+      - ./system/common:/system/common
       - ./env/${ENV}/${JWT_PUBLIC_KEY}:/system/api_gw/core/env/${JWT_PUBLIC_KEY}
     environment:
       PORT: ${API_GW_PORT}
@@ -155,6 +155,50 @@ services:
     command: "cargo watch -x run"
     depends_on:
       - auth
+    tty: true
+
+
+  ##############################################################################
+  # APIs
+  ##############################################################################
+
+  # Account API
+  account:
+    container_name: meower_account
+    build:
+      context: .
+      dockerfile: ./docker/services/account/Dockerfile
+    ports:
+      - ${ACCOUNT_PORT}:${ACCOUNT_PORT}
+    volumes:
+      - ./system/apis/account:/system/apis/account
+      - ./system/common:/system/common
+    environment:
+      PORT: ${ACCOUNT_PORT}
+      DATABASE_URL: ${ACCOUNT_DB_URL}
+    working_dir: /system/apis/account/core
+    command: "cargo watch -x run"
+    depends_on:
+      - account_db
+    tty: true
+
+  # Account API DB
+  account_db:
+    container_name: meower_account_db
+    build:
+      context: .
+      dockerfile: ./docker/services/postgres/Dockerfile
+    ports:
+      - ${ACCOUNT_DB_PORT}:${ACCOUNT_DB_PORT}
+    volumes:
+      - account_db_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: ${ACCOUNT_DB_NAME}
+      POSTGRES_USER: ${ACCOUNT_DB_USER}
+      POSTGRES_PASSWORD: ${ACCOUNT_DB_PASSWORD}
+      POSTGRES_INITDB_ARGS: --encoding=UTF-8
+    command: ["-c", "max_connections=200", "-p", "${ACCOUNT_DB_PORT}"]
+    restart: always
     tty: true
 
 
@@ -225,5 +269,6 @@ services:
 volumes:
   auth_db_data:
   app_db_data:
+  account_db_data:
   mailhog_data:
   ui_catalog_node_modules:
