feat: Implement graphql object to entity models

--- a/dev/system/apis/account/entity/Cargo.toml
+++ b/dev/system/apis/account/entity/Cargo.toml
@@ -13,6 +13,7 @@ repository = "https://github.com/ichigo-dev/meower"
 meower_entity_ext = { version = "0.1.0", path = "../../../common/entity_ext" }
 meower_utility = { version = "0.1.0", path = "../../../common/utility" }
 meower_validator = { version = "0.1.0", path = "../../../common/validator" }
+async-graphql = { version = "7.0.1", features = ["chrono"] }
 async-trait = "0.1.74"
 chrono = "0.4.31"
 sea-orm = "0.12.6"
