--- a/dev/system/app/spa/Cargo.toml
+++ b/dev/system/app/spa/Cargo.toml
@@ -21,6 +21,7 @@ serde-wasm-bindgen = "0.6.3"
 serde_json = "1.0.108"
 sycamore = { version = "0.8.2", features = ["suspense"] }
 sycamore-router = "0.8.0"
+thiserror = "1.0.51"
 wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.4.39"
 web-sys = { version = "0.3.66", features = [
