--- a/dev/system/api_gw/core/Cargo.toml
+++ b/dev/system/api_gw/core/Cargo.toml
@@ -18,3 +18,4 @@ serde = "1.0.195"
 serde_json = "1.0.111"
 tokio = { version = "1.34.0", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["cors"] }
+base64 = "0.21.7"
