--- a/dev/system/apis/account/core/Cargo.toml
+++ b/dev/system/apis/account/core/Cargo.toml
@@ -12,10 +12,13 @@ repository = "https://github.com/ichigo-dev/meower"
 [dependencies]
 meower_account_entity = { version = "0.1.0", path = "../entity" }
 meower_entity_ext = { version = "0.1.0", path = "../../../common/entity_ext" }
+meower_shared = { version = "0.1.0", path = "../../../common/shared" }
 async-graphql = { version = "7.0.1", features = ["chrono"] }
 axum = "0.7.2"
 sea-orm = { version = "0.12.6", features = [
     "runtime-tokio-rustls",
     "sqlx-postgres"
 ]}
+serde_json = "1.0.111"
 tokio = { version = "1.34.0", features = ["full"] }
+base64 = "0.21.7"
