feat: Add public_user_id field

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -65,6 +65,8 @@ FALLBACK_LOCALE=ja
 JWT_PRIVATE_KEY=jwt_key.pem
 JWT_PUBLIC_KEY=jwt_key.pub.pem
 
+PUBLIC_USER_ID_KEY=public_user_id
+
 
 ################################################################################
 # Oauth settings
