--- a/dev/system/app/spa/Cargo.toml
+++ b/dev/system/app/spa/Cargo.toml
@@ -12,6 +12,7 @@ repository = "https://github.com/ichigo-dev/meower"
 [dependencies]
 console_error_panic_hook = "0.1.7"
 console_log = "0.2.0"
+gloo-timers = "0.3.0"
 graphql_client = "0.13.0"
 log = "0.4.17"
 reqwest = { version = "0.11.23", features = ["json"] }
