--- a/dev/system/apis/account/core/Cargo.toml
+++ b/dev/system/apis/account/core/Cargo.toml
@@ -13,8 +13,10 @@ repository = "https://github.com/ichigo-dev/meower"
 meower_account_entity = { version = "0.1.0", path = "../entity" }
 meower_entity_ext = { version = "0.1.0", path = "../../../common/entity_ext" }
 meower_shared = { version = "0.1.0", path = "../../../common/shared" }
+accept-language = "3.1.0"
 async-graphql = { version = "7.0.1", features = ["chrono"] }
 axum = "0.7.2"
+rust-i18n = "2.3.0"
 sea-orm = { version = "0.12.6", features = [
     "runtime-tokio-rustls",
     "sqlx-postgres"
