chore: Add pgadmin container

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -98,3 +98,8 @@ TBLS_OUTPUT_PATH=../spec/database_design
 
 # UI catalog
 UI_CATALOG_PORT=8030
+
+# PGAdmin
+PGADMIN_PORT=8040
+PGADMIN_DEFAULT_EMAIL: root@example.com
+PGADMIN_DEFAULT_PASSWORD: root
