feat: Add MinIO container

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -57,6 +57,12 @@ ACCOUNT_DB_USER=meower_account
 ACCOUNT_DB_PASSWORD=meower_account
 ACCOUNT_DB_URL=postgres://${ACCOUNT_DB_USER}:${ACCOUNT_DB_PASSWORD}@account_db:${ACCOUNT_DB_PORT}/${ACCOUNT_DB_NAME}?sslmode=disable
 
+ACCOUNT_STORAGE_PORT=11234
+ACCOUNT_STORAGE_CONSOLE_PORT=11235
+ACCOUNT_STORAGE_USER=meower_account
+ACCOUNT_STORAGE_PASSWORD=meower_account
+ACCOUNT_STORAGE_BUCKET=develop
+
 
 ################################################################################
 # Application settings
