--- a/dev/.env.example
+++ b/dev/.env.example
@@ -57,6 +57,9 @@ ACCOUNT_DB_USER=meower_account
 ACCOUNT_DB_PASSWORD=meower_account
 ACCOUNT_DB_URL=postgres://${ACCOUNT_DB_USER}:${ACCOUNT_DB_PASSWORD}@account_db:${ACCOUNT_DB_PORT}/${ACCOUNT_DB_NAME}?sslmode=disable
 
+ACCOUNT_STORAGE_URL=
+ACCOUNT_STORAGE_BUCKET=uploads
+
 
 ################################################################################
 # Application settings
