--- a/dev/system/apis/account/core/Cargo.toml
+++ b/dev/system/apis/account/core/Cargo.toml
@@ -17,6 +17,7 @@ accept-language = "3.1.0"
 async-graphql = { version = "7.0.1", features = ["chrono"] }
 axum = "0.7.2"
 base64 = "0.21.7"
+object_store = "0.9.0"
 rust-i18n = "2.3.0"
 sea-orm = { version = "0.12.6", features = [
     "runtime-tokio-rustls",
