--- a/dev/system/api_gw/core/Cargo.toml
+++ b/dev/system/api_gw/core/Cargo.toml
@@ -12,10 +12,10 @@ repository = "https://github.com/ichigo-dev/meower"
 [dependencies]
 meower_shared = { version = "0.1.0", path = "../../common/shared" }
 axum = "0.7.2"
+base64 = "0.21.7"
 jsonwebtoken = "9.2.0"
-reqwest = { version = "0.11.23", features = ["json"] }
+reqwest = { version = "0.11.23", features = ["json", "stream"] }
 serde = "1.0.195"
 serde_json = "1.0.111"
 tokio = { version = "1.34.0", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["cors"] }
-base64 = "0.21.7"
