--- a/dev/system/apis/account/core/Cargo.toml
+++ b/dev/system/apis/account/core/Cargo.toml
@@ -25,3 +25,4 @@ sea-orm = { version = "0.12.6", features = [
 ]}
 serde_json = "1.0.111"
 tokio = { version = "1.34.0", features = ["full"] }
+tokio-util = "0.7.10"
