--- a/dev/system/app/spa/Cargo.toml
+++ b/dev/system/app/spa/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/ichigo-dev/meower"
 
 
 [dependencies]
+base64 = "0.21.7"
 chrono = { version = "0.4.34", features = ["serde"] }
 console_error_panic_hook = "0.1.7"
 console_log = "0.2.0"
@@ -26,6 +27,6 @@ sycamore-router = "0.9.0-beta.2"
 wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.4.39"
 web-sys = { version = "0.3.66", features = [
-	"Window",
-	"Navigator",
+    "Window",
+    "Navigator",
 ]}
