--- a/dev/system/apis/account/core/Cargo.toml
+++ b/dev/system/apis/account/core/Cargo.toml
@@ -13,6 +13,7 @@ repository = "https://github.com/ichigo-dev/meower"
 meower_account_entity = { version = "0.1.0", path = "../entity" }
 meower_entity_ext = { version = "0.1.0", path = "../../../common/entity_ext" }
 meower_shared = { version = "0.1.0", path = "../../../common/shared" }
+meower_utility = { version = "0.1.0", path = "../../../common/utility" }
 accept-language = "3.1.0"
 async-graphql = { version = "7.0.1", features = ["chrono"] }
 axum = "0.7.2"
