--- a/dev/system/app/spa/Cargo.toml
+++ b/dev/system/app/spa/Cargo.toml
@@ -27,6 +27,8 @@ sycamore-router = "0.9.0-beta.2"
 wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.4.39"
 web-sys = { version = "0.3.66", features = [
-    "Window",
+    "DomRect",
+    "Element",
     "Navigator",
+    "Window",
 ]}
