--- a/dev/system/app/spa/Cargo.toml
+++ b/dev/system/app/spa/Cargo.toml
@@ -11,7 +11,11 @@ repository = "https://github.com/ichigo-dev/meower"
 
 [dependencies]
 base64 = "0.21.7"
-chrono = { version = "0.4.34", features = ["serde"] }
+chrono = { version = "0.4.34", features = [
+    "alloc",
+    "serde",
+    "unstable-locales",
+]}
 console_error_panic_hook = "0.1.7"
 console_log = "0.2.0"
 gloo-timers = "0.3.0"
@@ -24,6 +28,7 @@ serde-wasm-bindgen = "0.6.3"
 serde_json = "1.0.108"
 sycamore = { version = "0.9.0-beta.2", features = ["suspense"] }
 sycamore-router = "0.9.0-beta.2"
+sys-locale = { version = "0.3.1", features = ["js"] }
 wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.4.39"
 web-sys = { version = "0.3.66", features = [
