feat: Separate email for notification and profile

--- a/dev/.env.example
+++ b/dev/.env.example
@@ -80,6 +80,7 @@ PUBLIC_USER_ID_KEY=public_user_id
 CLIENT_ID_KEY=client_id
 CLIENT_SECRET_KEY=client_secret
 ACCESS_TOKEN_KEY=access_token
+USER_EMAIL_KEY=user_email
 
 # Meower
 MEOWER_CLIENT_ID=dJfcedRutIhbH4ar1K1fhRpInQpFnEvM
