--- a/dev/compose.yml
+++ b/dev/compose.yml
@@ -90,6 +90,7 @@ services:
       AUTH_API_URL: ${AUTH_API_URL}
       ACCESS_TOKEN_KEY: ${ACCESS_TOKEN_KEY}
       PUBLIC_USER_ID_KEY: ${PUBLIC_USER_ID_KEY}
+      USER_EMAIL_KEY: ${USER_EMAIL_KEY}
     working_dir: /system/app/core
     command: "cargo watch -x run"
     depends_on:
@@ -132,6 +133,7 @@ services:
       CLIENT_ID_KEY: ${CLIENT_ID_KEY}
       ACCESS_TOKEN_KEY: ${ACCESS_TOKEN_KEY}
       PUBLIC_USER_ID_KEY: ${PUBLIC_USER_ID_KEY}
+      USER_EMAIL_KEY: ${USER_EMAIL_KEY}
     working_dir: /system/app/spa
     command: "trunk watch --release"
     tty: true
