--- a/dev/system/app/spa/Cargo.toml
+++ b/dev/system/app/spa/Cargo.toml
@@ -34,6 +34,8 @@ wasm-bindgen-futures = "0.4.39"
 web-sys = { version = "0.3.66", features = [
     "DomRect",
     "Element",
+    "FileList",
+    "FileReader",
     "Navigator",
     "Window",
 ]}
