--- a/dev/system/app/spa/Cargo.toml
+++ b/dev/system/app/spa/Cargo.toml
@@ -21,7 +21,7 @@ console_log = "0.2.0"
 gloo-timers = "0.3.0"
 graphql_client = "0.13.0"
 log = "0.4.17"
-reqwest = { version = "0.11.23", features = ["json"] }
+reqwest = { version = "0.11.23", features = ["json", "multipart"] }
 rust-i18n = "2.3.0"
 serde = "1.0.192"
 serde-wasm-bindgen = "0.6.3"
