--- a/dev/system/apis/account/core/Cargo.toml
+++ b/dev/system/apis/account/core/Cargo.toml
@@ -28,3 +28,4 @@ serde_json = "1.0.111"
 tokio = { version = "1.34.0", features = ["full"] }
 tokio-util = "0.7.10"
 chrono = "0.4.34"
+casbin = "2.2.0"
