feat: Update RBAC base

--- a/dev/system/apis/account/core/authorization/model.conf
+++ b/dev/system/apis/account/core/authorization/model.conf
@@ -1,14 +1,17 @@
 [request_definition]
-r = sub, dom, obj, act
+r = group_member_id, group_name, object, action
 
 [policy_definition]
-p = sub, dom, obj, act
+p = role, group_name, object, action
 
 [role_definition]
-g = _, _, _
+g = group_member_id, group_name, role
 
 [policy_effect]
-e = some(where (p.eft == allow))
+e = some(where (p.eft == allow)) || p.role == "root"
 
 [matchers]
-m = g(r.sub, p.sub, r.dom) && r.dom == p.dom && r.obj == p.obj && r.act == p.act
+m = g(r.group_member_id, r.group_name, p.role)
+    && r.group_name == p.group_name
+    && r.object == p.object
+    && r.action == p.action
