--- a/dev/system/apis/account/core/Cargo.toml
+++ b/dev/system/apis/account/core/Cargo.toml
@@ -29,3 +29,4 @@ tokio = { version = "1.34.0", features = ["full"] }
 tokio-util = "0.7.10"
 chrono = "0.4.34"
 casbin = "2.2.0"
+sqlx-adapter = "1.2.0"
