--- a/dev/system/apis/account/core/authorization/model.conf
+++ b/dev/system/apis/account/core/authorization/model.conf
@@ -1,17 +1,17 @@
 [request_definition]
-r = group_member_id, group_name, object, action
+r = group_member_id, group_id, object, action
 
 [policy_definition]
-p = role, group_name, object, action
+p = role, group_id, object, action
 
 [role_definition]
-g = group_member_id, group_name, role
+g = group_member_id, group_id, role
 
 [policy_effect]
-e = some(where (p.eft == allow)) || p.role == "root"
+e = some(where (p.eft == allow))
 
 [matchers]
-m = g(r.group_member_id, r.group_name, p.role)
-    && r.group_name == p.group_name
+m = g(r.group_member_id, r.group_id, p.role)
+    && r.group_id == p.group_id
     && r.object == p.object
     && r.action == p.action
