feat: Fix connection pool creation for Casbin

--- a/dev/system/apis/account/core/Cargo.toml
+++ b/dev/system/apis/account/core/Cargo.toml
@@ -27,6 +27,7 @@ sea-orm = { version = "0.12.6", features = [
     "sqlx-postgres"
 ]}
 serde_json = "1.0.111"
+sqlx = { version = "0.7.4", features = ["postgres"] }
 sqlx-adapter = "1.2.0"
 tokio = { version = "1.34.0", features = ["full"] }
 tokio-util = "0.7.10"
