feat: Update casbin model and access control

--- a/dev/system/apis/account/core/authorization/model.conf
+++ b/dev/system/apis/account/core/authorization/model.conf
@@ -1,3 +1,19 @@
+################################################################################
+# Casbin model.
+#
+# Used for authority management within a group. Request and policy parameters
+# are as follows:
+#
+# - group_member_id: Primary key of group_member table
+# - group_id: Primary key of group table
+# - object: Object names are the same as the table name, and the format is one
+#           of the following:
+#     - "[object_name]" *Deprecated as it points to objects in all groups.
+#     - "[object_name]:[group_id]"
+#     - "[object_name]:[group_id]:[object_id]"
+# - action: "create" or "read" or "update" or "delete"
+################################################################################
+
 [request_definition]
 r = group_member_id, group_id, object, action
 
