refactor: Fix role based authentication base

--- a/dev/system/apis/account/core/authorization/model.conf
+++ b/dev/system/apis/account/core/authorization/model.conf
@@ -6,11 +6,9 @@
 #
 # - group_member_id: Primary key of group_member table
 # - group_id: Primary key of group table
-# - object: Object names are the same as the table name, and the format is one
-#           of the following:
-#     - "[object_name]" *Deprecated as it points to objects in all groups.
-#     - "[object_name]:[group_id]"
-#     - "[object_name]:[group_id]:[object_id]"
+# - object: Object names are the same as the table name.
+#     - "[object_name]"
+#     - "[object_name]:[object_id]"
 # - action: "create" or "read" or "update" or "delete"
 ################################################################################
 
